# 3dtiles-viewer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE-MIT  README.md  ROADMAP.md
.github/workflows/: ci.yml
cmake/: toolchain-musl-static.cmake
data/shaders/: mesh.frag  mesh.vert
scripts/: build-static.sh  run-angkor.sh
src/: camera.cxx  camera.h  file_tile_loader.cxx  gltf_scene.cxx  gltf_scene.h  gpu_caps.cxx  gpu_caps.h  http_tile_loader.cxx  main.cxx  renderer.cxx  renderer.h  tile_cache.cxx  tile_cache.h  tile_loader.h  tileset.cxx  tileset.h  touch_ui.cxx  touch_ui.h  uri.cxx  uri.h  window.cxx  window.h
tests/: test_uri.cxx
